[package]
name = "good-vibes"
version = "0.1.0"
authors = ["Yacin Tmimi <yacintmimi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flexi_logger = "0.19"
log = "0.4.14"
rand = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.67"
structopt = { version = "0.3", default-features = false }
tokio = { version = "1", features = ["full"] }
warp = "0.3.1"
